[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Spriter/PaletteSelector.gd" type="Script" id=2]
[ext_resource path="res://Spriter/Canvas.gd" type="Script" id=3]
[ext_resource path="res://Spriter/Spriter.gd" type="Script" id=4]
[ext_resource path="res://Spriter/Painter.gd" type="Script" id=5]
[ext_resource path="res://Spriter/TilesetSelector.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/editor_icons.png" type="Texture2D" id=7]
[ext_resource path="res://Spriter/Tileset/TilesetControl.gd" type="Script" id=8]
[ext_resource path="res://Spriter/NewTilesetPopup.gd" type="Script" id=10]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[node name="Spriter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
testing = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0

[node name="TopBar" type="PanelContainer" parent="VBoxContainer"]
visible = false
offset_right = 320.0
offset_bottom = 14.0
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/TopBar"]
visible = false
offset_left = 7.0
offset_top = 7.0
offset_right = 313.0
offset_bottom = 7.0

[node name="Label" type="Label" parent="VBoxContainer/TopBar/HBox"]
visible = false
offset_right = 42.0
offset_bottom = 13.0
text = ":/Spriter"

[node name="Main" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 320.0
offset_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
theme_override_constants/separation = 0

[node name="Painter" type="Control" parent="VBoxContainer/Main"]
offset_right = 272.0
offset_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Main/Painter"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0

[node name="Canvas" type="Control" parent="VBoxContainer/Main/Painter/VBoxContainer"]
offset_right = 272.0
offset_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="PixelPos" type="Label" parent="VBoxContainer/Main/Painter/VBoxContainer/Canvas"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -16.0
offset_right = 64.0
offset_bottom = -3.0
text = "0,0"

[node name="TileID" type="Label" parent="VBoxContainer/Main/Painter"]
offset_left = 8.0
offset_top = 4.0
offset_right = 64.0
offset_bottom = 17.0
text = "#0"

[node name="Tools" type="VBoxContainer" parent="VBoxContainer/Main"]
offset_left = 272.0
offset_right = 320.0
offset_bottom = 157.0
theme_override_constants/separation = 0

[node name="PaletteSelector" type="Control" parent="VBoxContainer/Main/Tools"]
offset_right = 48.0
offset_bottom = 96.0
custom_minimum_size = Vector2( 48, 96 )
script = ExtResource( 2 )
bg_color = Color( 0.231373, 0.231373, 0.231373, 1 )
palette = [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.145098, 0.145098, 0.145098, 1 ), Color( 0.521569, 0.521569, 0.521569, 1 ), Color( 0.858824, 0.803922, 0.737255, 1 ), Color( 0.317647, 0.0745098, 0.0745098, 1 ), Color( 0.847059, 0.254902, 0.254902, 1 ), Color( 0.854902, 0, 0, 1 ), Color( 0.317647, 0.223529, 0.14902, 1 ), Color( 0.599121, 0.41625, 0.271477, 1 ), Color( 0.880371, 0.576813, 0.120363, 1 ), Color( 0.905882, 0.886275, 0.427451, 1 ), Color( 0.529412, 0.729412, 0.286275, 1 ), Color( 0.34902, 0.6, 0.0901961, 1 ), Color( 0.109804, 0.290196, 0.0862745, 1 ), Color( 0.203922, 0.87451, 0.870588, 1 ), Color( 0.156863, 0.52549, 0.701961, 1 ), Color( 0.14902, 0.25098, 0.541176, 1 ), Color( 0.741176, 0.501961, 0.945098, 1 ), Color( 0.555685, 0.259003, 0.808594, 1 ), Color( 0.241794, 0.122192, 0.34375, 1 ), Color( 0.560784, 0.392157, 0.894118, 1 ), Color( 0.294118, 0.0941176, 0.478431, 1 ), Color( 0.717647, 0.176471, 0.521569, 1 ), Color( 0.282353, 0.356863, 0.388235, 1 ), Color( 0.286275, 0.415686, 0.333333, 1 ), Color( 0.415686, 0.501961, 0.329412, 1 ), Color( 0.52549, 0.541176, 0.372549, 1 ), Color( 0.545098, 0.501961, 0.396078, 1 ), Color( 0.898039, 0.764706, 0.694118, 1 ), Color( 0.788235, 0.905882, 0.776471, 1 ) ]
swatch_size = 12
rows = 8

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Main/Tools"]
offset_top = 96.0
offset_right = 48.0
offset_bottom = 120.0
theme_override_constants/v_separation = 0
theme_override_constants/h_separation = 0
columns = 2

[node name="Paint" type="Button" parent="VBoxContainer/Main/Tools/GridContainer"]
offset_right = 24.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 24, 24 )
toggle_mode = true
pressed = true
group = SubResource( 3 )
icon = SubResource( 5 )
icon_alignment = 1

[node name="Fill" type="Button" parent="VBoxContainer/Main/Tools/GridContainer"]
offset_left = 24.0
offset_right = 48.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 24, 24 )
toggle_mode = true
group = SubResource( 3 )
icon = SubResource( 4 )
icon_alignment = 1

[node name="Tilesets" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 157.0
offset_right = 320.0
offset_bottom = 240.0
theme_override_constants/separation = 0

[node name="Panel" type="PanelContainer" parent="VBoxContainer/Tilesets"]
offset_right = 320.0
offset_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource( 2 )

[node name="TilesetSelector" parent="VBoxContainer/Tilesets/Panel" instance=ExtResource( 6 )]
offset_bottom = 19.0

[node name="ScrollContainer" parent="VBoxContainer/Tilesets/Panel/TilesetSelector" index="1"]
offset_right = 301.0
offset_bottom = 19.0

[node name="ButtonList" parent="VBoxContainer/Tilesets/Panel/TilesetSelector/ScrollContainer" index="0"]
offset_right = 301.0

[node name="ScrollRight" parent="VBoxContainer/Tilesets/Panel/TilesetSelector" index="2"]
offset_left = 304.0
offset_right = 320.0

[node name="AddTilesetButton" parent="VBoxContainer/Tilesets/Panel/TilesetSelector" index="3"]
offset_left = 302.0
offset_bottom = 19.0

[node name="TilesetContainer" type="ScrollContainer" parent="VBoxContainer/Tilesets"]
offset_top = 19.0
offset_right = 320.0
offset_bottom = 83.0
custom_minimum_size = Vector2( 0, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/bg = SubResource( 1 )
follow_focus = true

[node name="TilesetControl" type="GridContainer" parent="VBoxContainer/Tilesets/TilesetContainer"]
offset_left = 1.0
offset_top = 1.0
offset_right = 319.0
offset_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0
theme_override_constants/h_separation = 0
columns = 8
script = ExtResource( 8 )

[node name="NewTilesetPopup" type="Window" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -68.0
offset_right = 112.0
offset_bottom = 68.0
exclusive = true
window_title = "New Tileset"
script = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="NewTilesetPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.0
theme_override_constants/margin_right = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NewTilesetPopup/MarginContainer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 222.0
offset_bottom = 135.0
theme_override_constants/separation = 6

[node name="NameAndTileSize" type="HBoxContainer" parent="NewTilesetPopup/MarginContainer/VBoxContainer"]
offset_right = 218.0
offset_bottom = 23.0
alignment = 1

[node name="name" type="LineEdit" parent="NewTilesetPopup/MarginContainer/VBoxContainer/NameAndTileSize"]
offset_right = 107.0
offset_bottom = 23.0
custom_minimum_size = Vector2( 80, 0 )
size_flags_horizontal = 3
placeholder_text = "tileset name"

[node name="Tilesize" type="OptionButton" parent="NewTilesetPopup/MarginContainer/VBoxContainer/NameAndTileSize"]
offset_left = 111.0
offset_right = 218.0
offset_bottom = 23.0
size_flags_horizontal = 3

[node name="TileCount" type="Label" parent="NewTilesetPopup/MarginContainer/VBoxContainer"]
offset_top = 29.0
offset_right = 218.0
offset_bottom = 42.0
text = "Number of Tiles:"
align = 1

[node name="size" type="HBoxContainer" parent="NewTilesetPopup/MarginContainer/VBoxContainer"]
offset_top = 48.0
offset_right = 218.0
offset_bottom = 71.0
alignment = 1

[node name="columns" type="SpinBox" parent="NewTilesetPopup/MarginContainer/VBoxContainer/size"]
offset_left = 121.0
offset_right = 218.0
offset_bottom = 23.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 32.0
value = 8.0
rounded = true
suffix = "columns"

[node name="Label2" type="Label" parent="NewTilesetPopup/MarginContainer/VBoxContainer/size"]
offset_left = 101.0
offset_top = 5.0
offset_right = 117.0
offset_bottom = 18.0
text = " x "
align = 1

[node name="rows" type="SpinBox" parent="NewTilesetPopup/MarginContainer/VBoxContainer/size"]
offset_right = 97.0
offset_bottom = 23.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 32.0
value = 8.0
rounded = true
suffix = "rows"

[node name="HSeparator" type="HSeparator" parent="NewTilesetPopup/MarginContainer/VBoxContainer"]
offset_top = 77.0
offset_right = 218.0
offset_bottom = 81.0

[node name="Info" type="Label" parent="NewTilesetPopup/MarginContainer/VBoxContainer"]
offset_top = 87.0
offset_right = 218.0
offset_bottom = 100.0
text = "(Image size: 32x4)"
align = 1

[node name="Buttons" type="HBoxContainer" parent="NewTilesetPopup/MarginContainer/VBoxContainer"]
offset_top = 106.0
offset_right = 218.0
offset_bottom = 123.0

[node name="Add" type="Button" parent="NewTilesetPopup/MarginContainer/VBoxContainer/Buttons"]
offset_right = 107.0
offset_bottom = 17.0
size_flags_horizontal = 3
text = "Create"

[node name="Cancel" type="Button" parent="NewTilesetPopup/MarginContainer/VBoxContainer/Buttons"]
offset_left = 111.0
offset_right = 218.0
offset_bottom = 17.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="color_selected" from="VBoxContainer/Main/Tools/PaletteSelector" to="VBoxContainer/Main/Painter/VBoxContainer/Canvas" method="set_selected_color"]
[connection signal="pressed" from="VBoxContainer/Main/Tools/GridContainer/Paint" to="VBoxContainer/Main/Painter/VBoxContainer/Canvas" method="_on_paint_tool_pressed"]
[connection signal="pressed" from="VBoxContainer/Main/Tools/GridContainer/Fill" to="VBoxContainer/Main/Painter/VBoxContainer/Canvas" method="_on_Fill_tool_pressed"]

[editable path="VBoxContainer/Tilesets/Panel/TilesetSelector"]
